[project]
name = "vineetbansal-walrus-es"
version = "0.0.1"
authors = [
  { name="Vineet Bansal", email="vineetb@princeton.edu" },
]
description = "Some description here"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = []

[project.entry-points."walrus.hello"]
es = "api:hello"

